fix the width of header and align the body and header sections

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,8 +24,7 @@ main {
 
 .body {
   display: flex;
-  max-width: 1440px;
+  width: 1440px;
   flex-direction: column;
-  position: absolute;
   align-items: flex-start;
 }
