--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: -56px;
+  width: 1440px;
+  gap: 56px;
 }
 
 .background {
